fix layout bug

--- a/src/semantic/navigation.styl
+++ b/src/semantic/navigation.styl
@@ -8,3 +8,7 @@ a
   align-items baseline
   gap 1rem
   color var(--highlight)
+  text-decoration none
+
+  &:visited, &:hover
+    color var(--highlight)
