--- a/src/utilities/navigation.styl
+++ b/src/utilities/navigation.styl
@@ -5,9 +5,12 @@
   padding 1rem
   color var(--background)
   background-color var(--highlight)
-  border 1px solid var(--highlight)
-  border-radius 0.5rem
+  border var(--border-thinnest)
+  border-radius var(--radius-small)
   min-width 8rem
+
+  &:visited, &:hover
+    color var(--background)
 
   &:focus-visible
     outline 1px solid var(--accent)
